# Simple-Online-Shop

./: .env.sample  .gitignore  commands.txt  pyproject.toml
cart/: cart.py  forms.py  urls.py  views.py
cart/templates/cart/: detail.html
core/: celery.py  settings.py  urls.py
coupons/: admin.py  models.py  views.py
coupons/migrations/: 0001_initial.py
locale/en/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.po
orders/: admin.py  custom_actions.py  custom_view.py  forms.py  models.py  tasks.py  urls.py  views.py
orders/locale/en/LC_MESSAGES/: django.po
orders/locale/es/LC_MESSAGES/: django.po
orders/migrations/: 0001_initial.py  0002_order_stripe_id.py  0003_order_coupon_order_discount.py  0004_alter_order_address_alter_order_city_and_more.py
orders/templates/admin/orders/order/: detail.html
orders/templates/orders/order/: create.html  pdf.html
payment/: tasks.py  urls.py  views.py  webhooks.py
payment/templates/payment/: process.html
shop/: admin.py  models.py  recommender.py  urls.py  views.py
shop/management/commands/: populate_data.py
shop/migrations/: 0001_initial.py  0002_categorytranslation_producttranslation_and_more.py  0003_alter_categorytranslation_slug_and_more.py
shop/templates/shop/: base.html
shop/templates/shop/product/: detail.html  list.html
