[project]
name = "onlineshopdjango"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.7",
    "django-daisy>=2.0.0",
    "django-rosetta>=0.10.3",
    "flower>=2.0.1",
    "pillow>=12.0.0",
    "python-decouple>=3.8",
    "redis>=7.0.0",
    "stripe>=13.0.1",
    "weasyprint>=66.0",
]

